--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 @plugin 'tailwindcss-animate';
-@plugin "@tailwindcss/typography";
+@plugin '@tailwindcss/typography';
 
 @source '../views';
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
@@ -9,7 +9,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-    --font-sans: 'Nunito', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-sans:
+        'Nunito', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+        'Noto Color Emoji';
     --font-serif: Georgia, serif;
     --font-mono: Fira Code, ui-monospace, monospace;
 
@@ -78,93 +80,101 @@
 
 :root {
     --background: oklch(0.9846 0.0017 247.8389);
-    --foreground: oklch(0.2099 0.0341 263.4360);
-    --card: oklch(0.9670 0.0029 264.5419);
-    --card-foreground: oklch(0.2099 0.0341 263.4360);
+    --foreground: oklch(0.2099 0.0341 263.436);
+    --card: oklch(0.967 0.0029 264.5419);
+    --card-foreground: oklch(0.2099 0.0341 263.436);
     --popover: oklch(0.9846 0.0017 247.8389);
-    --popover-foreground: oklch(0.2099 0.0341 263.4360);
-    --primary: oklch(0.4740 0.1989 262.1884);
+    --popover-foreground: oklch(0.2099 0.0341 263.436);
+    --primary: oklch(0.474 0.1989 262.1884);
     --primary-foreground: oklch(0.9688 0.0148 277.8543);
     --secondary: oklch(0.8202 0.2222 145.8081);
-    --secondary-foreground: oklch(0.2643 0.0797 142.1570);
-    --muted: oklch(0.8720 0.0106 261.7873);
-    --muted-foreground: oklch(0.2099 0.0341 263.4360);
+    --secondary-foreground: oklch(0.2643 0.0797 142.157);
+    --muted: oklch(0.872 0.0106 261.7873);
+    --muted-foreground: oklch(0.2099 0.0341 263.436);
     --accent: oklch(0.9688 0.0148 277.8543);
-    --accent-foreground: oklch(0.4740 0.1989 262.1884);
+    --accent-foreground: oklch(0.474 0.1989 262.1884);
     --destructive: oklch(0.6378 0.2373 25.4359);
     --destructive-foreground: oklch(0.9705 0.0129 17.3797);
-    --border: oklch(0.8720 0.0106 261.7873);
+    --border: oklch(0.872 0.0106 261.7873);
     --input: oklch(0.9276 0.0058 264.5313);
-    --ring: oklch(0.4740 0.1989 262.1884);
-    --chart-1: oklch(0.4740 0.1989 262.1884);
+    --ring: oklch(0.474 0.1989 262.1884);
+    --chart-1: oklch(0.474 0.1989 262.1884);
     --chart-2: oklch(0.8202 0.2222 145.8081);
-    --chart-3: oklch(0.6450 0.1657 52.0491);
+    --chart-3: oklch(0.645 0.1657 52.0491);
     --chart-4: oklch(0.6906 0.1369 229.5196);
     --chart-5: oklch(0.6441 0.2448 16.2846);
     --chart-6: oklch(0.5206 0.2914 289.06);
     --sidebar: oklch(0.9276 0.0058 264.5313);
-    --sidebar-foreground: oklch(0.2099 0.0341 263.4360);
-    --sidebar-primary: oklch(0.4740 0.1989 262.1884);
+    --sidebar-foreground: oklch(0.2099 0.0341 263.436);
+    --sidebar-primary: oklch(0.474 0.1989 262.1884);
     --sidebar-primary-foreground: oklch(0.9846 0.0017 247.8389);
     --sidebar-accent: oklch(0.9688 0.0148 277.8543);
-    --sidebar-accent-foreground: oklch(0.4740 0.1989 262.1884);
+    --sidebar-accent-foreground: oklch(0.474 0.1989 262.1884);
     --sidebar-border: oklch(0.9276 0.0058 264.5313);
-    --sidebar-ring: oklch(0.4740 0.1989 262.1884);
+    --sidebar-ring: oklch(0.474 0.1989 262.1884);
     --radius: 1.3rem;
-    --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-sm: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-md: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-lg: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
+    --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-sm:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-md:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-lg:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-xl:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
     --spacing: 0.25rem;
 }
 
 .dark {
-    --background: oklch(0.1300 0.0280 261.6920);
-    --foreground: oklch(0.9850 0.0020 247.8390);
-    --card: oklch(0.2100 0.0060 285.8850);
-    --card-foreground: oklch(0.9670 0.0010 286.3750);
-    --popover: oklch(0.1300 0.0280 261.6920);
-    --popover-foreground: oklch(0.9850 0.0020 247.8390);
-    --primary: oklch(0.4740 0.1989 262.1884);
+    --background: oklch(0.13 0.028 261.692);
+    --foreground: oklch(0.985 0.002 247.839);
+    --card: oklch(0.21 0.006 285.885);
+    --card-foreground: oklch(0.967 0.001 286.375);
+    --popover: oklch(0.13 0.028 261.692);
+    --popover-foreground: oklch(0.985 0.002 247.839);
+    --primary: oklch(0.474 0.1989 262.1884);
     --primary-foreground: oklch(0.9688 0.0148 277.8543);
-    --secondary: oklch(0.2643 0.0797 142.1570);
+    --secondary: oklch(0.2643 0.0797 142.157);
     --secondary-foreground: oklch(0.8202 0.2222 145.8081);
-    --muted: oklch(0.2090 0 0);
+    --muted: oklch(0.209 0 0);
     --muted-foreground: oklch(0.5637 0.0078 247.9662);
     --accent: oklch(0.2257 0.0544 242.8662);
-    --accent-foreground: oklch(0.4740 0.1989 262.1884);
+    --accent-foreground: oklch(0.474 0.1989 262.1884);
     --destructive: oklch(0.6378 0.2373 25.4359);
     --destructive-foreground: oklch(0.9705 0.0129 17.3797);
-    --border: oklch(0.2740 0.0060 286.0330);
-    --input: oklch(0.2780 0.0330 256.8480);
-    --ring: oklch(0.4740 0.1989 262.1884);
-    --chart-1: oklch(0.4740 0.1989 262.1884);
+    --border: oklch(0.274 0.006 286.033);
+    --input: oklch(0.278 0.033 256.848);
+    --ring: oklch(0.474 0.1989 262.1884);
+    --chart-1: oklch(0.474 0.1989 262.1884);
     --chart-2: oklch(0.8202 0.2222 145.8081);
-    --chart-3: oklch(0.6450 0.1657 52.0491);
+    --chart-3: oklch(0.645 0.1657 52.0491);
     --chart-4: oklch(0.6906 0.1369 229.5196);
     --chart-5: oklch(0.6441 0.2448 16.2846);
     --chart-6: oklch(0.5206 0.2914 289.06);
-    --sidebar: oklch(0.2097 0.0080 274.5332);
+    --sidebar: oklch(0.2097 0.008 274.5332);
     --sidebar-foreground: oklch(0.8853 0 0);
-    --sidebar-primary: oklch(0.4740 0.1989 262.1884);
-    --sidebar-primary-foreground: oklch(1.0000 0 0);
+    --sidebar-primary: oklch(0.474 0.1989 262.1884);
+    --sidebar-primary-foreground: oklch(1 0 0);
     --sidebar-accent: oklch(0.2257 0.0544 242.8662);
-    --sidebar-accent-foreground: oklch(0.4740 0.1989 262.1884);
-    --sidebar-border: oklch(0.3795 0.0220 240.5943);
-    --sidebar-ring: oklch(0.4740 0.1989 262.1884);
+    --sidebar-accent-foreground: oklch(0.474 0.1989 262.1884);
+    --sidebar-border: oklch(0.3795 0.022 240.5943);
+    --sidebar-ring: oklch(0.474 0.1989 262.1884);
     --radius: 1.3rem;
-    --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-sm: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-md: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-lg: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
-    --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
+    --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-sm:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-md:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-lg:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-xl:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0), 0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
 }
 
 @layer base {
